api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apinodejs-deployment
spec:
  selector:
    matchLabels:
      app: apinodejs
  replicas: 3
  template:
    metadata:
      labels:
        app: apinodejs
    spec:
      containers:
        - name: apinodejs
          image: eduardocj/api-nodenew-icecream:latest
          ports:
            - containerPort: 27017
            
#para el servicio de exponer la api
---
apiVersion: v1
kind: Service
metadata:
  name: apinodejs-service
spec:
  selector:
    app: apinodejs
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
